--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 #navigator {
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 30px;
     z-index: 9999;
@@ -288,9 +288,106 @@ li img{
 	position: relative;
 }
 
-#stream-module{
+#stream-module,
+#bargraph-module{
 	display: none;
 }
 
+#line{
+	width:3px;
+	background-color:#262b41;
+	height:700px;
+	position: fixed;
+	left:138px;
+}
 
+#barbg{
+	background: url(./img/barbg.png);
+	position: fixed;
+	left:130px;
+	bottom:20px;
+	height:575px;
+	width:1166px;
+}
+
+#hero1{
+	position: absolute;
+	left:262px;
+	bottom: 90px;
+	height:1px;
+	background-color:#379ed5;
+	width:30px;
+}
+
+#hero2{
+	position: absolute;
+	left:395px;
+	bottom: 90px;
+	height:1px;
+	background-color:#c04058;
+	width:30px;
+}
+
+#hero3{
+	position: absolute;
+	left:530px;
+	bottom: 90px;
+	height:1px;
+	background-color:#030000;
+	width:30px;
+}
+
+#hero4{
+	position: absolute;
+	left:660px;
+	bottom: 90px;
+	height:1px;
+	background-color:#086b90;
+	width:30px;
+}
+
+#hero5{
+	position: absolute;
+	left:790px;
+	bottom: 90px;
+	height:1px;
+	background-color:#484a4e;
+	width:30px;
+}
+
+#hero6{
+	position: absolute;
+	left:920px;
+	bottom: 90px;
+	height:1px;
+	background-color:#ecb776;
+	width:30px;
+}
+
+#hero7{
+	position: absolute;
+	left:1054px;
+	bottom: 90px;
+	height:1px;
+	background-color:#888a92;
+	width:30px;
+}
+
+#hero8{
+	position: absolute;
+	left:1186px;
+	bottom: 90px;
+	height:1px;
+	background-color:#e09225;
+	width:30px;
+}
+
+#head2{
+	background: url(./img/head2.png);
+	width:268px;
+    height:80px;
+    position: fixed;
+    right:80px;
+    top:50px;
+}
 
