--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,54 @@ body {
     background-color: #30364e;
 }
 
+
+#loadingbg {
+	background: url(./img/headbg.png);
+    position: relative;
+    width:731px;
+    height:306px;
+    left: calc(50% - 400px);
+    top: 180px;
+}
+
+#loadingstar {
+	background: url(./img/star.png);
+    position: absolute;
+    width:78px;
+    height:74px;
+    right:-35px;
+    top: 10px;
+    animation: rotate 4s infinite linear;
+}
+
+#loadingaround {
+	background: url(./img/around.png);
+    position: absolute;
+    width:770px;
+    height:108px;
+    left:-5px;
+    top: 110px;
+    animation: flash 1s infinite ease-in-out alternate;
+}
+
+@keyframes flash {
+    from {
+        opacity:1;
+    }
+    to {
+        opacity:0.1;
+    }
+}
+
+@keyframes rotate {
+  from {-webkit-transform:rotate(0deg);}
+  to {-webkit-transform:rotate(360deg);}
+}
+
+#main-module{
+	display: none;
+}
+
 #heroCanvas {
     position: absolute;
     left: -340px;
